# rust_experiment_macros

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml  trivy.yml
main/: Cargo.toml
main/src/: main.rs
time_proc_macro_attribute/: Cargo.toml  README.md
time_proc_macro_attribute/src/: lib.rs  main.rs
