[package]
name = "time_proc_macro_attribute"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.109", features = ["full", "fold", "printing"] }
quote = "1.0.21"
uuid = { version = "1.2.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUID ]
]}

